Fix the wrap on faculty

--- a/css/style2.css
+++ b/css/style2.css
@@ -20,7 +20,7 @@ body {
   border-radius: 25px;
   padding: 20px;
   margin: 10px;
-  max-width: 35em;
+  max-width: 35em;`
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   background-color: #F0F4FA
@@ -34,14 +34,17 @@ body {
 
 #faculty {
   background-color: #F0F4FA;
-  display: flex;
   flex-direction: row;
   justify-content: center;
   align-content: left;
 }
 #faculty-list {
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
 }
+
 #style-selector {
   position: fixed;
   background-color: #3A2E39;
@@ -73,4 +76,5 @@ body {
 /* Change the link background color to #000 (black) on hover */
 #style-selector li a:hover {
   background-color: #000;
+  transition: 0.1s;
 }
